# kdeNeur

./: .directory  configure.in  kdeneur.desktop
debian/: control
i18n/: kdeneur_ru_RU.ts
src/: .directory  Makefile  Makefile.am  frmsettings.cpp  frmsettings.h  frmsettings.ui  getnameapp.cpp  kdeneur.pro  kxneur.cpp  kxneurtray.cpp  kxneurtray.h  main.cpp  qrc_resursrc.cpp  src.pro  tete.cpp  tete.h  ui_addrules.h  ui_adduseraction.h  ui_edithotkey.h  ui_frmabout.h  ui_frmaddabbreviature.h  ui_frmsettings.h  ui_getnameapp.h  ui_ruleschange.h  xneurconfig.cpp  xneurconfig.h
src/debian/: changelog  control  copyright  kdeneur.menu  rules
src/i18n/: kdeneur_ru_RU.qm  kdeneur_ru_RU.ts
