AC_INIT(configure.in)
AC_PREREQ(2.59)
AM_CONFIG_HEADER(config.h)

AC_CONFIG_MACRO_DIR(m4)
AM_INIT_AUTOMAKE(kdeneur, 0.16.0)

AC_PROG_LIBTOOL
AC_PROG_INSTALL

AC_LANG_C
AM_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_MAKE_SET

AC_HEADER_STDC

PKG_PROG_PKG_CONFIG([0.20])

PKG_CHECK_MODULES(XNEURCONF, [xnconfig = 0.16.0])
PKG_CHECK_MODULES(XNEURLIB, [xneur = 0.16.0])

PKG_CHECK_MODULES(QTCORE, [QtCore])
PKG_CHECK_MODULES(QTGUI, [QtGui])
PKG_CHECK_MODULES(QTUITOOLS, [QtUiTools])
PKG_CHECK_MODULES(QTDBUS, [QtDBus])

AM_GNU_GETTEXT_VERSION([0.16.1])
AM_GNU_GETTEXT([external])

DEFAULT_CFLAGS="-Wall -Wextra -Werror -g0 -fPIC  -lkdecore -lplasma"
AC_SUBST(DEFAULT_CFLAGS)

AC_OUTPUT([Makefile kdeneur.desktop src/Makefile pixmaps/Makefile i18n/Makefile])

cat << EOF

$PACKAGE $VERSION configured successfully:

	Installing into:        $prefix

	Compiler flags:         $CFLAGS

	QtCore compiler flags:	$QTCORE_CFLAGS
	QtCore flags:	$QTCORE_LIBS

	XNeur Config flags:	$XNEURCONF_CFLAGS
	XNeur Config libs:	$XNEURCONF_LIBS
EOF

